--- a/crates/leadscale-db/Cargo.toml
+++ b/crates/leadscale-db/Cargo.toml
@@ -9,12 +9,16 @@ license.workspace = true
 leadscale-types = { workspace = true }
 tokio = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
 
-# Database - placeholder, user to decide on sqlx vs sea-orm vs diesel
-# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres"] }
+# Database
+sea-orm = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
+sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
+async-trait = "0.1"
 
 [dev-dependencies]
+tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
