feat: add oidc dependencies and expand config
- add openidconnect, moka, axum-extra, and rand dependencies
- expand oidcconfig with pkce support
- add allowed_domains, allowed_users, allowed_groups filtering
- add expiry_secs and use_expiry_from_token options
- add extra_params for custom oauth2 parameters
- add pkceconfig and pkcemethod types
- add comprehensive tests for oidc config

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -32,6 +32,12 @@ ipnet = { workspace = true }
 # CLI
 clap = { version = "4", features = ["derive"] }
 
+# OIDC
+openidconnect = { workspace = true }
+moka = { workspace = true }
+axum-extra = { version = "0.10", features = ["cookie"] }
+rand = "0.9"
+
 [dev-dependencies]
 tower = "0.5"
 hyper = "1.8"
