--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,12 @@ ipnet = { version = "2", features = ["serde"] }
 # Time
 chrono = { version = "0.4", features = ["serde"] }
 
+# OIDC
+openidconnect = "4"
+
+# Caching
+moka = { version = "0.12", features = ["sync"] }
+
 # Internal crates
 railscale-types = { path = "crates/railscale-types" }
 railscale-db = { path = "crates/railscale-db" }
