feat: add oidc types
- add registrationid type for oidc session correlation
- add oidcclaims for id token and userinfo claims
- export oidcconfig, pkceconfig, pkcemethod from railscale-types
- add base64 dependency for registrationid encoding
- add comprehensive tests for oidc types

--- a/crates/railscale-types/Cargo.toml
+++ b/crates/railscale-types/Cargo.toml
@@ -11,5 +11,6 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
+base64 = "0.22"
 
 [dev-dependencies]
