feat(map): add length-prefixed streaming response format
When maprequest has stream=true, the response now uses the tailscale
control protocol format: 4-byte little-endian length prefix followed
by json body. Non-streaming requests continue to return plain json

This is the foundation for streaming mapresponse updates

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -44,3 +44,5 @@ hyper = "1.8"
 chrono = { workspace = true }
 wiremock = "0.6"
 jsonwebtoken = "9"
+bytes = { workspace = true }
+http-body-util = "0.1"
