feat(map): implement long-polling with pub/sub notifications
- add StateNotifier using tokio::sync::broadcast for state changes
- refactor map handler to hold connection open for streaming
- push updates to streaming clients when notifier fires
- use stream::unfold for async stream from broadcast receiver
- handle lagged receivers by sending latest state
- add test for state change updates via long-polling

All 105 tests passing

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -38,6 +38,11 @@ moka = { workspace = true }
 axum-extra = { version = "0.10", features = ["cookie"] }
 rand = "0.9"
 
+# Streaming
+futures-util = "0.3"
+bytes = { workspace = true }
+hyper = "1.8"
+
 [dev-dependencies]
 tower = "0.5"
 hyper = "1.8"
@@ -46,3 +51,5 @@ wiremock = "0.6"
 jsonwebtoken = "9"
 bytes = { workspace = true }
 http-body-util = "0.1"
+reqwest = { version = "0.12", features = ["stream"] }
+futures-util = "0.3"
