feat: replace anyhow with color-eyre for better error presentation
- add color-eyre to workspace and railscale crate dependencies
- initialize color_eyre::install() at application startup
- update main.rs to use color_eyre::eyre::{Context, Result, bail}
- refactor database url parsing to use if-let instead of unwrap()
- add error_test.rs with tests for error context propagation

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -20,7 +20,7 @@ railscale-state = { workspace = true }
 railscale-proto = { workspace = true }
 railscale-grants = { workspace = true }
 tokio = { workspace = true }
-anyhow = { workspace = true }
+color-eyre = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 axum = "0.8"
