--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -53,3 +53,4 @@ bytes = { workspace = true }
 http-body-util = "0.1"
 reqwest = { version = "0.12", features = ["stream"] }
 futures-util = "0.3"
+tempfile = "3.24.0"
