--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -23,7 +23,7 @@ tokio = { workspace = true }
 color-eyre = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-axum = "0.8"
+axum = { version = "0.8", features = ["ws"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 chrono = { workspace = true }
@@ -54,3 +54,4 @@ http-body-util = "0.1"
 reqwest = { version = "0.12", features = ["stream"] }
 futures-util = "0.3"
 tempfile = "3.24.0"
+base64 = { workspace = true }
