test: add noise handshake test for ts2021 endpoint (red)
Add integration test that creates a valid tailscale Noise IK initiation
message and expects a properly-framed response. Test currently fails as
expected - the ts2021 handler is still a stub

Includes manual implementation of tailscale's Noise IK protocol:
- custom prologue mixing ("tailscale Control protocol v{version}")
- message framing (101-byte initiation, 51-byte response)
- hKDF-blake2s key derivation

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -55,3 +55,11 @@ reqwest = { version = "0.12", features = ["stream"] }
 futures-util = "0.3"
 tempfile = "3.24.0"
 base64 = { workspace = true }
+tokio-tungstenite = "0.26"
+hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
+http = "1"
+# Crypto crates for Noise handshake testing - pinned for compatibility
+blake2 = "0.10"
+chacha20poly1305 = "0.10"
+x25519-dalek = { version = "2", features = ["static_secrets"] }
+rand_core = { version = "0.6", features = ["getrandom"] }
