feat: implement http/2 over noise transport in /ts2021 handler
- server runs http/2 over encrypted WebSocket after Noise handshake
- routes /machine/register and /machine/map through http/2 layer
- serverNoiseStream wraps axum WebSocket with Noise encryption
- noiseStream (generic) for client-side encrypted transport
- test verifies http/2 request/response over encrypted channel

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -45,6 +45,10 @@ hyper = "1.8"
 
 # TS2021
 base64 = { workspace = true }
+tokio-tungstenite = "0.26"
+snow = "0.10"
+tower = "0.5"
+hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
 
 [dev-dependencies]
 tower = "0.5"
