--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -21,13 +21,16 @@ railscale-proto = { workspace = true }
 railscale-grants = { workspace = true }
 tokio = { workspace = true }
 color-eyre = { workspace = true }
+thiserror = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 axum = { version = "0.8", features = ["ws"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
+serde_yaml = "0.9"
 chrono = { workspace = true }
 ipnet = { workspace = true }
+reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
 
 # CLI
 clap = { version = "4", features = ["derive"] }
