fix: snow nonce endianness for tailscale compatibility
Snow uses little-endian nonces, tailscale uses big-endian. This caused
the first Noise frame to decrypt successfully (nonce=0 is identical in
both endiannesses) but all subsequent frames to fail

Vendored snow crate and changed ChaChaPoly nonce encoding from LE to BE

- add vendored snow with BE nonce fix
- add endian-odyssey.md documenting the debugging journey
- fix clippy io_other_error warnings
- update progress.md with Phase 12 completion

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,3 +64,6 @@ railscale-db = { path = "crates/railscale-db" }
 railscale-state = { path = "crates/railscale-state" }
 railscale-proto = { path = "crates/railscale-proto" }
 railscale-grants = { path = "crates/railscale-grants" }
+
+[patch.crates-io]
+snow = { path = "vendor/snow" }
