feat: tailscale-compatible registerrequest/registerresponse
- add prefixed hex serialization for keys (nodekey:, mkey:, discokey:)
- update RegisterRequest to match tailscale format:
  - PascalCase field names
  - Auth.AuthKey for preauth key
  - NodeKey/OldNodeKey as prefixed hex strings
  - Hostinfo support
- update RegisterResponse to tailscale format:
  - User, Login, MachineAuthorized, AuthURL fields
  - No machine_key/node_key in response (per tailscale spec)
- update tests to use new format

--- a/crates/railscale-types/Cargo.toml
+++ b/crates/railscale-types/Cargo.toml
@@ -12,5 +12,6 @@ thiserror = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
 base64 = "0.22"
+hex = "0.4"
 
 [dev-dependencies]
