feat: add zstd compression support for mapresponse
- add Compress field to maprequest to support compression preference
- implement zstd compression for non-streaming and streaming responses
- client sends Compress: "zstd" and expects zstd-compressed json payload
- fix "magic number mismatch" error from tailscale client

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -54,6 +54,9 @@ snow = "0.10"
 tower = "0.5"
 hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
 
+# Compression
+zstd = "0.13"
+
 [dev-dependencies]
 tower = "0.5"
 hyper = "1.8"
@@ -71,3 +74,4 @@ hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
 http = "1"
 # Crypto crates for Noise handshake testing
 snow = "0.10"
+zstd = "0.13"
