feat: wire up embedded derp server in main, update nixos test
- add separate derp keypair (key isolation from Noise key)
- wire spawn_derp_listener in main.rs, populate EmbeddedDerpRuntime
- update nixos test: enable derp, open port 3340
- rename claude.md to AGENTS.md, add PLAN.md
- fix rcgen 0.13 api changes, sha2 0.10 compatibility
- document known issue: tailscale bootstrap dns blocks on external derp

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -57,8 +57,8 @@ httparse = "1.9"
 rcgen = "0.13"
 rustls = { version = "0.23", default-features = false, features = ["std"] }
 rustls-pemfile = "2"
-sha2 = "0.11"
-tokio-rustls = { version = "0.26", features = ["rustls-0_23"] }
+sha2 = "0.10"
+tokio-rustls = "0.26"
 
 # Compression
 zstd = "0.13"
