--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -55,7 +55,7 @@ hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
 crypto_box = "0.9"
 httparse = "1.9"
 rcgen = "0.13"
-rustls = { version = "0.23", default-features = false, features = ["std"] }
+rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
 rustls-pemfile = "2"
 sha2 = "0.10"
 tokio-rustls = "0.26"
