feat: add treefmt with rustfmt, nixfmt, and taplo
Adds treefmt-nix for unified formatting via 'nix fmt':
- rustfmt for Rust code
- nixfmt for Nix files
- taplo for TOML files

Run 'nix fmt' to format all files

--- a/crates/railscale-db/Cargo.toml
+++ b/crates/railscale-db/Cargo.toml
@@ -16,8 +16,17 @@ chrono = { workspace = true }
 ipnet = { workspace = true }
 
 # Database
-sea-orm = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
-sea-orm-migration = { version = "1", features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls"] }
+sea-orm = { version = "1", features = [
+  "sqlx-sqlite",
+  "sqlx-postgres",
+  "runtime-tokio-rustls",
+  "macros",
+] }
+sea-orm-migration = { version = "1", features = [
+  "sqlx-sqlite",
+  "sqlx-postgres",
+  "runtime-tokio-rustls",
+] }
 async-trait = "0.1"
 
 [dev-dependencies]
