--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -27,6 +27,7 @@ axum = { version = "0.8", features = ["ws"] }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = "0.9"
+toml = "0.8"
 chrono = { workspace = true }
 ipnet = { workspace = true }
 reqwest = { version = "0.12", default-features = false, features = [
