--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -37,6 +37,8 @@ reqwest = { version = "0.12", default-features = false, features = [
 
 # CLI
 clap = { version = "4", features = ["derive"] }
+url = "2"
+dirs = "6"
 
 # OIDC
 openidconnect = { workspace = true }
