--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -38,7 +38,7 @@ reqwest = { version = "0.12", default-features = false, features = [
 # CLI
 clap = { version = "4", features = ["derive"] }
 url = "2"
-dirs = "6"
+expand-tilde = "0.6"
 
 # OIDC
 openidconnect = { workspace = true }
