feat(version): add get /version endpoint with build info

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -91,3 +91,8 @@ anyhow = { workspace = true }
 # Crypto crates for Noise handshake testing
 snow = "0.10"
 zstd = "0.13"
+
+[build-dependencies]
+chrono = "0.4"
+
+
