feat(admin): add railscale-admin crate with grpc proto
New crate providing admin gRPC service over Unix socket:

- adminService protobuf with policy, user, node, preauth key, and api key operations
- server implementation with PolicyHandle for hot-reload
- client wrapper with Unix socket support via TokioIo
- added protobuf to nix build inputs

policy RPCs fully implemented, other operations use existing
Database trait methods where available

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ members = [
   "crates/railscale-db",
   "crates/railscale-proto",
   "crates/railscale-grants",
+  "crates/railscale-admin",
 ]
 
 [workspace.metadata.crane]
@@ -62,6 +63,7 @@ railscale-types = { path = "crates/railscale-types" }
 railscale-db = { path = "crates/railscale-db" }
 railscale-proto = { path = "crates/railscale-proto" }
 railscale-grants = { path = "crates/railscale-grants" }
+railscale-admin = { path = "crates/railscale-admin" }
 
 [patch.crates-io]
 snow = { path = "vendor/snow" }
