--- a/crates/railscale-admin/Cargo.toml
+++ b/crates/railscale-admin/Cargo.toml
@@ -16,6 +16,7 @@ tokio-stream = { version = "0.1", features = ["net"] }
 tower = "0.5"
 tracing = { workspace = true }
 thiserror = { workspace = true }
+serde = { workspace = true }
 serde_json = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
