feat(config): add rate limiting options to apiconfig
Add rate_limit_enabled (default: true) and rate_limit_per_minute
(default: 100) fields to ApiConfig for per-IP api rate limiting

--- a/config.example.toml
+++ b/config.example.toml
@@ -277,6 +277,14 @@ global = [
 # When false, /api/v1/* endpoints return 404.
 enabled = false
 
+# Enable per-IP rate limiting for API requests.
+# Protects against abuse and brute-force attacks.
+rate_limit_enabled = true
+
+# Maximum requests per minute per IP address.
+# Only applies when rate_limit_enabled is true.
+rate_limit_per_minute = 100
+
 # -----------------------------------------------------------------------------
 # Feature Flags
 # -----------------------------------------------------------------------------
