--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -78,6 +78,9 @@ zstd = "0.13"
 tonic = "0.14"
 tokio-stream = { version = "0.1", features = ["net"] }
 
+# REST API
+tower_governor = { version = "0.8", default-features = false, features = ["axum"] }
+
 [dev-dependencies]
 tower = "0.5"
 hyper = "1.8"
