feat(types): add email newtype with rfc-compliant validation
- uses email_address crate for RFC 5321/5322 validation
- validates during serde deserialisation
- integrated into CreateUserRequest api endpoint
- invalid emails rejected with 'invalid email format' error

--- a/crates/railscale-types/Cargo.toml
+++ b/crates/railscale-types/Cargo.toml
@@ -11,6 +11,7 @@ serde_json = { workspace = true }
 thiserror = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
+email_address = { workspace = true }
 base64 = "0.22"
 hex = "0.4"
 rand = "0.9"
