--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,9 @@ chrono = { version = "0.4", features = ["serde"] }
 bytes = "1"
 base64 = "0.22"
 
+# Validation
+email_address = { version = "0.2", features = ["serde_support"] }
+
 # OIDC
 openidconnect = "4"
 
