--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -83,6 +83,9 @@ tower_governor = { version = "0.8", default-features = false, features = [
   "axum",
 ] }
 
+# Rate limiting for DERP/STUN
+governor = "0.8"
+
 [dev-dependencies]
 tower = "0.5"
 hyper = "1.8"
