--- a/crates/railscale-types/Cargo.toml
+++ b/crates/railscale-types/Cargo.toml
@@ -17,5 +17,6 @@ hex = "0.4"
 rand = "0.9"
 sha2 = "0.10"
 subtle = "2.5"
+zeroize = { version = "1.8", features = ["derive"] }
 
 [dev-dependencies]
