security: use split token storage for preauth keys
Store key_prefix (for display) + key_hash (SHA-256) instead of plaintext
Full key is only returned at creation time; list endpoints show prefix only

This addresses audit finding 1: plaintext preauth key storage

Changes:
- preauthkeyToken: add prefix(), hash(), verify_hash() methods
- preauthkey: replace 'key' with 'key_prefix' + 'key_hash' fields
- database: lookup by hash instead of plaintext comparison
- api/gRPC: return full key at creation, prefix only for list

--- a/crates/railscale-db/Cargo.toml
+++ b/crates/railscale-db/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
+hex = "0.4"
 
 # Database
 sea-orm = { version = "1", features = [
