--- a/crates/railscale-proto/Cargo.toml
+++ b/crates/railscale-proto/Cargo.toml
@@ -12,6 +12,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+chrono = { workspace = true }
 snow = "0.10"
 
 [dev-dependencies]
