--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,7 @@ ipnet = { version = "2", features = ["serde"] }
 
 # Time
 chrono = { version = "0.4", features = ["serde"] }
+humantime-serde = "1.1"
 
 # Binary data
 bytes = "1"
