--- a/crates/railscale-grants/Cargo.toml
+++ b/crates/railscale-grants/Cargo.toml
@@ -12,6 +12,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
 ipnet = { workspace = true }
+humantime-serde = { workspace = true }
 
 [dev-dependencies]
 chrono = { workspace = true }
