feat(tka): add NlPublicKey and NlPrivateKey types
- NlPublicKey: ed25519 verification key, serde as 'nlpub:...'
- NlPrivateKey: ed25519 signing key with zeroize on drop
- sign/verify operations using ed25519-consensus
- tests for roundtrip, signing, and validation

--- a/crates/railscale-tka/Cargo.toml
+++ b/crates/railscale-tka/Cargo.toml
@@ -16,6 +16,7 @@ hex = "0.4"
 # crypto
 blake2 = "0.10"
 ed25519-consensus = "2.1"
+rand = "0.9"
 
 # cbor with integer keys
 minicbor = { version = "0.25", features = ["derive", "alloc"] }
