feat(tka): add MarshaledSignature and MarshaledAum types
- opaque wrappers for CBOR-encoded TKA data
- serde as base64 for JSON wire format

--- a/crates/railscale-tka/Cargo.toml
+++ b/crates/railscale-tka/Cargo.toml
@@ -12,6 +12,7 @@ serde_json = { workspace = true }
 secrecy = { workspace = true }
 zeroize = { version = "1.8", features = ["derive"] }
 hex = "0.4"
+base64 = { workspace = true }
 
 # crypto
 blake2 = "0.10"
