--- a/crates/railscale-proto/Cargo.toml
+++ b/crates/railscale-proto/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 
 [dependencies]
 railscale-types = { workspace = true }
+railscale-tka = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
