feat(handlers): implement tka_init_begin handler
- store genesis AUM in database on init_begin
- return list of all nodes needing signatures
- add railscale-tka as dev dependency for tests

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -106,6 +106,8 @@ secrecy = { workspace = true }
 # Crypto crates for Noise handshake testing
 snow = "0.10"
 zstd = "0.13"
+# TKA testing
+railscale-tka = { workspace = true }
 
 [build-dependencies]
 chrono = "0.4"
