feat(tka): implement tka_init_finish handler
verifies node-key signatures and enables tailnet lock. parses genesis
aum to extract tka public key, validates each signature against it,
stores signatures in db, and sets tka state to enabled with genesis
hash as head.

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -19,6 +19,7 @@ railscale-db = { workspace = true }
 railscale-proto = { workspace = true }
 railscale-grants = { workspace = true }
 railscale-admin = { workspace = true }
+railscale-tka = { workspace = true }
 tokio = { workspace = true }
 color-eyre = { workspace = true }
 thiserror = { workspace = true }
