feat(tka): implement lock CLI commands
- railscale lock init: generate keypair, create genesis, enable TKA
- railscale lock status: show TKA state (table/json)
- railscale lock sign: sign a node with TKA key
- railscale lock disable: disable TKA with secret

includes admin gRPC API, NixOS VM tests

--- a/crates/railscale-admin/Cargo.toml
+++ b/crates/railscale-admin/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 railscale-grants = { workspace = true }
 railscale-db = { workspace = true }
 railscale-types = { workspace = true }
+railscale-tka = { workspace = true }
 tonic = "0.14"
 tonic-prost = "0.14"
 prost = "0.14"
