--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -42,6 +42,7 @@ reqwest = { version = "0.13", default-features = false, features = [
 clap = { version = "4", features = ["derive"] }
 url = "2"
 expand-tilde = "0.6"
+rand = "0.8"
 
 # OIDC
 openidconnect = { workspace = true }
