--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,9 @@ openidconnect = "4"
 # Caching
 moka = { version = "0.12", features = ["sync"] }
 
+# GeoIP
+maxminddb = "0.24"
+
 # Secret handling
 secrecy = { version = "0.10", features = ["serde"] }
 
