feat(config): add geoip_database_path config option
- add optional geoip_database_path field to Config struct
- enable maxminddb feature in railscale crate

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 railscale-types = { workspace = true }
 railscale-db = { workspace = true }
 railscale-proto = { workspace = true }
-railscale-grants = { workspace = true }
+railscale-grants = { workspace = true, features = ["maxminddb"] }
 railscale-admin = { workspace = true }
 railscale-tka = { workspace = true }
 tokio = { workspace = true }
