--- a/crates/railscale-db/Cargo.toml
+++ b/crates/railscale-db/Cargo.toml
@@ -14,6 +14,7 @@ tracing = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
 hex = "0.4"
+rand = "0.9"
 
 # Database
 sea-orm = { version = "1", features = [
